<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFDA"
    android:orientation="vertical"
    android:padding="16dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bkg_pets" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtHorarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHorarios" />

        <Spinner
            android:id="@+id/spHorarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/horarios_array"
            android:labelFor="@+id/spHorarios" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtPets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPets" />

    <Spinner
        android:id="@+id/spPets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/pets_array"
        android:labelFor="@+id/spPets" />
    </LinearLayout>    
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtServicos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtServicos" />

    <Spinner
        android:id="@+id/spServicos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/servicos_array"
        android:labelFor="@+id/spServicos" />
    </LinearLayout>      

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtHidratacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHidratacao" />

            <RadioButton
                android:id="@+id/radSimples"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radSimples" />

            <RadioButton
                android:id="@+id/radLuxo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radLuxo" />
        </RadioGroup>
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkPerfume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkPerfume" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Preencha com as observações necessárias"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAgendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.375"
            android:text="@string/btnAgendar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.375"
            android:text="@string/btnCancelar" />
    </LinearLayout>

</LinearLayout>