<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_meupet"
    android:orientation="horizontal"
    android:padding="16dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">    

        <ImageButton
            android:id="@+id/imgbtnServicos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnServicos"
            android:src="@drawable/ic_btnservicos" />

        <ImageButton
            android:id="@+id/imgbtnMeuPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnMeuPet"
            android:src="@drawable/ic_btnmeupet" />

        <ImageButton
            android:id="@+id/imgbtnContato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnContato"
            android:src="@drawable/ic_btncontato" />
    </LinearLayout>
    
</LinearLayout>